--- a/app/views/djs/signup.erb
+++ b/app/views/djs/signup.erb
@@ -6,7 +6,7 @@
 <label> Username: </label> <br>
 <input type="text" name="username" placeholder="Username"> <br>
 <label> Password: </label> <br>
-<input type="text" name="password" placeholder="Password">
-
-
+<input type="text" name="password" placeholder="Password"><br>
+<br>
+<input type="submit" value="Sign up!">
 </form>
