--- a/app/views/playlists/new.erb
+++ b/app/views/playlists/new.erb
@@ -2,7 +2,7 @@
 
 <form method="post" action="/playlists">  
 <label> Title: </label> <br>
-<input type="text" name="Title" placeholder="Title"><br>
+<input type="text" name="title" placeholder="Title"><br>
 <label> Content </label> <br>
 <input type="text" name="content" placeholder="playlist Content"><br>
 <label> Air Time: </label> <br>
