added edit feauture for playlists

--- a/app/views/playlists/show.erb
+++ b/app/views/playlists/show.erb
@@ -2,3 +2,6 @@
 <label> Genre: </label> <%= @playlist.genre %>
 
 <p><%= @playlist.content %></p>
+
+
+ <a href="/playlists/<%= @playlist.id %>/edit" > EDIT </a>
