added delete route

--- a/app/views/playlists/index.erb
+++ b/app/views/playlists/index.erb
@@ -17,7 +17,11 @@
 
 <br>
 <br>
-
+<a href="/djs"> View All Djs </a>
+<br>
 <%if logged_in?%>
 <a href='/playlists/new'> Create a new playlist</a>
+
+
+
 <% end %>
