--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
   <div class="col-md-8 col-md-offset-2">
-    <h2>Sinatra Template Default Page</h2>
+    <h2>Radio Homepage</h2>
 
     <div class="content">
       <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
@@ -12,8 +12,8 @@
     <div class="sidebar">
       <h3>Environment</h3>
       <ul>
-        <li><b>Ruby:</b> <%= RUBY_VERSION %></li>
-        <li><b>Environment:</b> <%= ENV["RACK_ENV"] %></li>
+        <li><br><a href="/djs"> Djs</a></li>
+        <li><b><a href="/playlists"> Playlists</a> </li>
         <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
         <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
       </ul>
