--- a/app/views/playlists/new.erb
+++ b/app/views/playlists/new.erb
@@ -10,6 +10,9 @@
 <label> Genre: </label> <br>
 <input type="text" name="genre" placeholder="genre"><br>
 <br>
+<label> Host: </label> <br>
+<input type="text" name="host" placeholder="Host"><br>
+<br>
 <input type="submit" value="Upload Playlist">
 
 
