removed host attribute

--- a/app/views/playlists/new.erb
+++ b/app/views/playlists/new.erb
@@ -10,8 +10,6 @@
 <label> Genre: </label> <br>
 <input type="text" name="genre" placeholder="genre"><br>
 <br>
-<label> Host: </label> <br>
-<input type="text" name="host" placeholder="Host"><br>
 <br>
 <input type="submit" value="Upload Playlist">
 
@@ -19,4 +17,6 @@
 
 
 </form>
+<br>
+ <a href="/playlists"> Back to playlists </a>
 
