--- a/app/views/playlists/show.erb
+++ b/app/views/playlists/show.erb
@@ -1,7 +1,7 @@
 <h1><%= @playlist.title %></h1>
 <h4> Genre: <%= @playlist.genre %> </h4> 
 <h4> Air Time: <%= @playlist.air_time %> </h4> 
-<h4> hosted by: <%= @playlist.host %> </h4> 
+<h4> hosted by: <%= @playlist.dj.dj_name %> </h4> 
 <p><%= @playlist.content %></p>
 
 
