added show erb and edit erb to Djs controller. Can now see list of playlists made by a dj. Playlist can now link to Dj who created it

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -25,7 +25,7 @@
       <a href="/signup">Signup</a><br>
       <a href="/login">Login</a>
       <% end %>
-        <small>&copy; 2021 <strong>Radioshows</strong></small>
+        <small>&copy; 2021 <strong>Radio Station</strong></small>
       </footer>
     </div>
 
