--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -12,8 +12,8 @@
     <div class="sidebar">
       <h3>Environment</h3>
       <ul>
-        <li><br><a href="/djs"> Djs</a></li>
-        <li><b><a href="/playlists"> Playlists</a> </li>
+        <li><br><a href="/djs"> <strong>Djs</strong></a></li>
+        <li><b><a href="/playlists"> <strong>Playlists</strong></a> </li>
         <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
         <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
       </ul>
