--- a/app/views/djs/edit.erb
+++ b/app/views/djs/edit.erb
@@ -1,13 +1,11 @@
-<form method="post" action="">  
+<form method="post" action="/djs/:id'">  
  <input id="hidden" type="hidden" name="_method" value="PATCH">
-<label> Dj Name: </label> <br>
-<input type="text" name="title" placeholder="Title"><br>
-<label> Content </label> <br>
-<input type="text" name="content" placeholder="playlist Content"><br>
-<label> Air Time: </label> <br>
-<input type="text" name="air_time" placeholder="time"> <br>
-<label> Genre: </label> <br>
-<input type="text" name="genre" placeholder="genre"><br>
+<label>Name: </label> <br>
+<input type="text" name="name" placeholder="Name"><br>
+<label> DJ Name: </label> <br>
+<input type="text" name="dj_name" placeholder="DJ Name"><br>
+<label> Bio: </label> <br>
+<input type="text" name="bio" placeholder="Dj Bio"> <br>
 <br>
 <input type="submit" value="Update Playlist">
 
