editted layout page, began edit route for djs. Problem with authorization

--- a/app/views/djs/edit.erb
+++ b/app/views/djs/edit.erb
@@ -4,11 +4,13 @@
 <input type="text" name="name" placeholder="Name"><br>
 <label> DJ Name: </label> <br>
 <input type="text" name="dj_name" placeholder="DJ Name"><br>
-<label> Bio: </label> <br>
-<input type="text" name="bio" placeholder="Dj Bio"> <br>
 <br>
-<input type="submit" value="Update Playlist">
-
+<input type="submit" value="Update DJ Profile">
+<br>
+<br>
+ <a href="/playlists"> Playlists </a>
+<br>
+  <a href="/"> Home </a>
 
 
 
