--- a/app/views/djs/show.erb
+++ b/app/views/djs/show.erb
@@ -9,12 +9,21 @@
 <%= playlist[:title]%>
 </a>
 <% end %>
+<br>
+<br>
 
 </li>
 </ul>
 <br>
 <br>
- <a href="/playlists"> Back to playlists </a>
+ <a href="/playlists"> Playlists </a>
  <br>
  <br>
+ <a href="/djs"> Back to djs </a>
+ <br>
+ <br>
+ <a href="/"> Home </a>
+<br>
  
+ 
+
