--- a/app/views/playlists/show.erb
+++ b/app/views/playlists/show.erb
@@ -17,3 +17,6 @@
             <input type="hidden" id="hidden" name="_method" value="DELETE">
             <input type="submit" value="DELETE">
  </form>
+
+ <br>
+ <a href="/"> Home </a>
