updated playlist forms to only display edit and delete button if the current dj is the same as the creator of the playlist

--- a/app/views/playlists/edit.erb
+++ b/app/views/playlists/edit.erb
@@ -13,7 +13,7 @@
 <br>
 <input type="submit" value="Update Playlist">
 
-
-
-
 </form>
+<br>
+<br>
+<a href="/playlists/<%=@playlist.id%>"> Back to Playlist </a>
