--- a/app/views/playlists/new.erb
+++ b/app/views/playlists/new.erb
@@ -2,9 +2,10 @@
 
 <form method="post" action="/playlists">  
 <label> Title: </label> <br>
-<input type="text" name="title" placeholder="Title"><br>
+<input type="text" name="title" placeholder="Title" style="width: 300px;"><br>
 <label> Content </label> <br>
-<input type="text" name="content" placeholder="playlist Content"><br>
+<input style="height: 500px; width: 300px;" type="text" name="content" placeholder="playlist Content" ><br>
+<%# <textarea rows="2" cols="25" placeholder="This is the default text"></textarea> %>
 <label> Air Time: </label> <br>
 <input type="text" name="air_time" placeholder="time"> <br>
 <label> Genre: </label> <br>
