--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -10,12 +10,11 @@
     </div>
 
     <div class="sidebar">
-      <h3>Environment</h3>
+      <h3>X-PLORE</h3>
       <ul>
         <li><br><a href="/djs"> <strong>Djs</strong></a></li>
         <li><b><a href="/playlists"> <strong>Playlists</strong></a> </li>
-        <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
-        <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
+        
       </ul>
     </div>
 
