updated edit route to only be accessible to person editing. Problem with delete route. Playlists left behind cannot be displayed

--- a/app/views/playlists/new.erb
+++ b/app/views/playlists/new.erb
@@ -4,7 +4,7 @@
 <label> Title: </label> <br>
 <input type="text" name="title" placeholder="Title" style="width: 300px;"><br>
 <label> Content </label> <br>
-<input style="height: 500px; width: 300px;" type="text" name="content" placeholder="playlist Content" ><br>
+<textarea type="text" name="content" placeholder="playlist Content" ></textarea><br>
 <%# <textarea rows="2" cols="25" placeholder="This is the default text"></textarea> %>
 <label> Air Time: </label> <br>
 <input type="text" name="air_time" placeholder="time"> <br>
