--- a/app/views/djs/edit.erb
+++ b/app/views/djs/edit.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/djs/:id'">  
+<form method="post" action="/djs/<%@dj.id%>'">  
  <input id="hidden" type="hidden" name="_method" value="PATCH">
 <label>Name: </label> <br>
 <input type="text" name="name" placeholder="Name"><br>
@@ -15,3 +15,10 @@
 
 
 </form>
+
+<br>
+<br>
+<form method="POST" action="/djs/<%= @dj.id %>">
+            <input type="hidden" id="hidden" name="_method" value="DELETE">
+            <input type="submit" value="DELETE DJ Profile">
+ </form>
