got rid of edit and delete routes for djs

--- a/app/views/djs/index.erb
+++ b/app/views/djs/index.erb
@@ -1,9 +1,9 @@
-<h1>All Djs here</h1>
+<h1>ALL DJs</h1>
 
-<ul>
+<ul >
 <% @djs.each do | dj |%>
 <li>
-<a href="/djs/<%= dj.id %>" >
+<p><a href="/djs/<%= dj.id %>" ></p>
 <%= dj.dj_name%> 
 </a>
 
