--- a/app/views/djs/signup.erb
+++ b/app/views/djs/signup.erb
@@ -1,4 +1,8 @@
-<form method='POST' action='/djs'>
+<h1><strong>SIGN UP</strong></h1>
+<br>
+<br>
+
+<p><form method='POST' action='/djs'>
 <label> Name: </label> <br>
 <input type="text" name="name" placeholder="Name"><br>
 <label> Dj Name: </label> <br>
@@ -9,7 +13,8 @@
 <input type="text" name="password" placeholder="Password"><br>
 <br>
 <input type="submit" value="Sign up!">
-</form>
+</form></p>
+
 <br>
 <br>
-<a href="/"> Home </a>
+<a href="/"> home </a>
