--- a/app/views/playlists/edit.erb
+++ b/app/views/playlists/edit.erb
@@ -5,7 +5,7 @@
 <label> Title: </label> <br>
 <input type="text" name="title" placeholder="Title"><br>
 <label> Content </label> <br>
-<input type="text" name="content" placeholder="playlist Content"><br>
+<textarea type="text" name="content" placeholder="playlist Content" ></textarea><br>
 <label> Air Time: </label> <br>
 <input type="text" name="air_time" placeholder="time"> <br>
 <label> Genre: </label> <br>
@@ -16,4 +16,4 @@
 </form>
 <br>
 <br>
-<a href="/playlists/<%=@playlist.id%>"> Back to Playlist </a>
+<a href="/playlists/<%=@playlist.id%>"> back to playlist </a>
