--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
+  <%# <header><img src="images/corneal-small.png" class="img-responsive main-image"></header> %>
   <div class="col-md-8 col-md-offset-2">
     <h2>Radio Homepage</h2>
 
@@ -12,8 +12,8 @@
     <div class="sidebar">
       <h3>X-PLORE</h3>
       <ul>
-        <li><br><a href="/djs"> <strong>Djs</strong></a></li>
-        <li><b><a href="/playlists"> <strong>Playlists</strong></a> </li>
+        <li><br><a href="/djs"> <strong>DJS</strong></a></li>
+        <li><b><a href="/playlists"> <strong>PLAYLISTS</strong></a> </li>
         
       </ul>
     </div>
