--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -35,6 +35,7 @@
   h1 {
     font-size: 36px;
     line-height: 54px;
+    text-align: center;
   }
 
   h2 {
@@ -42,15 +43,22 @@
     font-size: 24px;
     line-height: 36px;
     margin-bottom: 16px;
+    text-align: center;
   }
 
   h3 {
     font-size: 18px;
     line-height: 36px;
+    text-align: center;
+  }
+
+  h4 {
+    text-align: center;
   }
 
   p {
     margin-bottom: 18px;
+    text-align: center;
   }
 
   .main {
@@ -60,6 +68,10 @@
   .content {
     float: left;
     width: 60%; /* 480px / 800px */
+  }
+
+  a {
+    text-align: center;
   }
 
   .sidebar {
@@ -115,6 +127,7 @@
     line-height: 24px;
   }
 
+  
 
   
 }
