added new logo to public file

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <%# <header><img src="images/corneal-small.png" class="img-responsive main-image"></header> %>
+  <header><img src="images/triangle_logo_red.png" class="img-responsive main-image"></header>
   <div class="col-md-8 col-md-offset-2">
-    <h2>Radio Homepage</h2>
+    <h2>HOMEPAGE</h2>
 
     <div class="content">
       <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
