--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -29,7 +29,7 @@
       <a href="/signup">Signup</a><br>
       <a href="/login">Login</a>
       <% end %>
-        <small>&copy; 2021 <strong>Radio Station</strong></small>
+        <small>&copy; 2021 <strong>Triangle Radio </strong></small>
       </footer>
     </div>
 
