--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -95,6 +95,10 @@
     margin-top: 20px;
     padding-top: 20px;
   }
+
+  header {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 600px) {
