--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,9 @@
   </head>
   <body>
     <div class="wrapper">
-
+        <% flash.keys.each do | er | %>
+          <h4 class="error"><%= flash[er] %></h4>
+        <% end %>
         <%= yield %>
 
       <footer class="branding">
