--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -32,6 +32,7 @@
       <a href="/login">Login</a>
       <% end %>
         <small>&copy; 2021 <strong>Red Triangle Radio </strong></small>
+        <img align="right" src="images/logo.png" class="img-responsive main-image">
       </footer>
     </div>
 
