--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -4,19 +4,17 @@
     <h2>HOMEPAGE</h2>
 
     <div class="content">
-      <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
-      as expected. To get started, delete this file (<code>app/views/welcome.erb)</code> and begin adding
-      your own actions to <code>application_controller.rb</code>. For more information, see the <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
+     <p>
+    <h3 >WELCOME</h3>
+      </p>
     </div>
-
-    <div class="sidebar">
-      <h3>X-PLORE</h3>
-      <ul>
+    <ul>
+    <strong>X-PLPORE</strong>
         <li><br><a href="/djs"> <strong>DJS</strong></a></li>
         <li><b><a href="/playlists"> <strong>PLAYLISTS</strong></a> </li>
         
+      
+        
       </ul>
-    </div>
-
   </div>
 </div>
