--- a/app/views/djs/index.erb
+++ b/app/views/djs/index.erb
@@ -13,8 +13,8 @@
 <br>
 <br>
 <br>
-<a href="/playlists"> Playlists </a>
+<a href="/playlists"> playlists </a>
 <br>
-<a href="/"> Home </a>
+<a href="/"> home </a>
 <br>
 </ul>
