--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,18 +21,19 @@
         <%= yield %>
 
       <footer class="branding">
+      <%# <img align="right" src="images/logo.png" class="img-responsive main-image"> %>
       <% if logged_in? %>
       <strong> Welcome, <a href="/djs/<%= current_dj.id%>"><%= current_dj.dj_name%> </a></strong>
       <br>
-      <a href="/logout">Log out</a>
+      <a href="/logout">logout</a>
       <br>
       <a href="/djs/<%= current_dj.id%>/profile">  DJ Profile </a>
       <% else %>
-      <a href="/signup">Signup</a><br>
-      <a href="/login">Login</a>
+      <a href="/signup">signup</a><br>
+      <a href="/login">login</a>
       <% end %>
         <small>&copy; 2021 <strong>Red Triangle Radio </strong></small>
-        <img align="right" src="images/logo.png" class="img-responsive main-image">
+        
       </footer>
     </div>
 
