--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,7 +21,7 @@
         <%= yield %>
 
       <footer class="branding">
-      <%# <img align="right" src="images/logo.png" class="img-responsive main-image"> %>
+      <img align="right" src="images/logo.png" class="img-responsive main-image">
       <% if logged_in? %>
       <strong> Welcome, <a href="/djs/<%= current_dj.id%>"><%= current_dj.dj_name%> </a></strong>
       <br>
