--- a/app/views/djs/dj_profile.erb
+++ b/app/views/djs/dj_profile.erb
@@ -9,9 +9,9 @@
 
 <br>
 <br>
- <a href="/playlists"> Playlists </a>
+ <a href="/playlists"> playlists </a>
 <br>
-  <a href="/"> Home </a>
+  <a href="/"> home </a>
 
 
 
