--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,7 +27,7 @@
       <br>
       <a href="/logout">logout</a>
       <br>
-      <a href="/djs/<%= current_dj.id%>/profile">  DJ Profile </a>
+      <a href="/djs/<%= current_dj.id%>/profile">  dj profile </a>
       <% else %>
       <a href="/signup">signup</a><br>
       <a href="/login">login</a>
