--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <header><img src="images/red_triangle_logo.png" class="img-responsive main-image"></header>
-  <div class="col-md-8 col-md-offset-2">
+  <div  color="red" class="col-md-8 col-md-offset-2">
     <h2>HOMEPAGE</h2>
 
     <div class="content">
      <p>
-    <h3 >WELCOME</h3>
-      </p>
+    <h3>WELCOME</h3>
+    </p>
     </div>
     <ul>
     <strong>X-PLPORE</strong>
