--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -39,7 +39,7 @@
   }
 
   h2 {
-    border-bottom: 2px solid #ccc;
+    border-bottom: 2px solid rgb(255, 0, 0);
     font-size: 24px;
     line-height: 36px;
     margin-bottom: 16px;
@@ -93,7 +93,7 @@
   }
 
   footer.branding {
-    border-top: 2px solid #ccc;
+    border-top: 2px solid rgb(255, 0, 0);
     margin-top: 20px;
     padding-top: 20px;
   }
